--- a/infra/argocd/kustomization.yaml
+++ b/infra/argocd/kustomization.yaml
@@ -3,9 +3,8 @@ kind: Kustomization
 
 resources:
   - ns.yaml
-  - ingress-route.yaml
-  - auth
-
+  - http-route.yaml
+  
 helmCharts:
   - name: argo-cd
     repo: https://argoproj.github.io/argo-helm
