--- a/infra/cilium/values.yaml
+++ b/infra/cilium/values.yaml
@@ -1,8 +1,8 @@
 cluster:
-  name: gauss
+  name: puppetmaster
   id: 0
 
-k8sServiceHost: "192.168.1.50"
+k8sServiceHost: "192.168.2.181"
 k8sServicePort: "6443"
 
 kubeProxyReplacement: true
@@ -15,13 +15,13 @@ operator:
 # Roll out cilium agent pods automatically when ConfigMap is updated.
 rollOutCiliumPods: true
 
-#debug:
-#  enabled: true
+debug:
+  enabled: false
 
 # Increase rate limit when doing L2 announcements
 k8sClientRateLimit:
-  qps: 50
-  burst: 200
+  qps: 20
+  burst: 100
 
 l2announcements:
   enabled: true
@@ -35,21 +35,10 @@ gatewayAPI:
   enabled: true
 
 hubble:
-  enabled: true
-  relay:
-    enabled: true
-    rollOutPods: true
-  ui:
-    enabled: true
-    rollOutPods: true
-
-# mTLS
-authentication:
   enabled: false
-  mutual:
-    spire:
-      enabled: false
-      install:
-        server:
-          dataStorage:
-            storageClass: cilium-spire-sc
+  relay:
+    enabled: false
+    rollOutPods: false
+  ui:
+    enabled: false
+    rollOutPods: true
